# nushell

./: Cargo.toml
benches/: benchmarks.rs
crates/nu-cmd-dataframe/src/dataframe/values/nu_dataframe/: custom_value.rs
crates/nu-cmd-dataframe/src/dataframe/values/nu_expression/: custom_value.rs
crates/nu-cmd-dataframe/src/dataframe/values/nu_lazyframe/: custom_value.rs
crates/nu-cmd-dataframe/src/dataframe/values/nu_lazygroupby/: custom_value.rs
crates/nu-cmd-dataframe/src/dataframe/values/nu_when/: custom_value.rs
crates/nu-command/: Cargo.toml
crates/nu-command/src/: default_context.rs
crates/nu-command/src/database/values/: sqlite.rs
crates/nu-command/src/filesystem/: ln.rs  mod.rs  open.rs
crates/nu-command/src/formats/from/: kdl.rs  mod.rs
crates/nu-command/src/formats/to/: kdl.rs  mod.rs
crates/nu-command/tests/commands/: ln.rs  mod.rs
crates/nu-command/tests/commands/path/: expand.rs
crates/nu-engine/: Cargo.toml
crates/nu-engine/src/: column.rs  eval.rs
crates/nu-path/src/: expansions.rs  lib.rs
crates/nu-pipes/: Cargo.toml
crates/nu-pipes/src/: errors.rs  lib.rs  misc.rs  pipe_custom_value.rs  serve.rs  stream_writer.rs  utils.rs
crates/nu-pipes/src/nxpc/: misc.rs  mod.rs
crates/nu-pipes/src/os_pipes/: bidirectional.rs  io.rs  mod.rs  unidirectional.rs  unix.rs  windows.rs
crates/nu-pipes/tests/: pipes.rs
crates/nu-plugin/: Cargo.toml
crates/nu-plugin/src/: lib.rs
crates/nu-plugin/src/plugin/: declaration.rs  mod.rs
crates/nu-plugin/src/protocol/: mod.rs  os_pipe.rs  piped.rs  plugin_custom_value.rs  plugin_data.rs
crates/nu-plugin/src/protocol/os_pipe/: big_array.rs  encoder.rs  misc.rs  mod.rs  pipe_custom_value.rs  unix.rs  windows.rs
crates/nu-plugin/src/serializers/: json.rs  mod.rs  msgpack.rs
crates/nu-protocol/src/: pipeline_data.rs  plugin_signature.rs  shell_error.rs
crates/nu-protocol/src/engine/: command.rs  engine_state.rs
crates/nu-protocol/src/value/: custom_value.rs  mod.rs  stream.rs
crates/nu-std/std/: iter.nu
crates/nu_plugin_custom_values/src/: cool_custom_value.rs  main.rs  second_custom_value.rs
crates/nu_plugin_example/src/nu/: mod.rs
crates/nu_plugin_file/: Cargo.toml
crates/nu_plugin_file/src/: lib.rs  main.rs
crates/nu_plugin_formats/src/: lib.rs
crates/nu_plugin_formats_v1/: Cargo.toml  README.md
crates/nu_plugin_formats_v1/src/: lib.rs  main.rs
crates/nu_plugin_gstat/src/nu/: mod.rs
crates/nu_plugin_inc/src/nu/: mod.rs
crates/nu_plugin_query/src/nu/: mod.rs
src/: main.rs  test_bins.rs
tests/plugins/: mod.rs
tests/plugins/formats/: ini.rs
tests/plugins/formats_v1/: eml.rs  ics.rs  ini.rs  vcf.rs
