[package]
authors = ["The Nushell Project Developers"]
description = "Platform-agnostic pipes used by Nu"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-pipes"
edition = "2021"
license = "MIT"
name = "nu-pipes"
version = "0.87.2"

[lib]
bench = false

[[bin]]
name = "pipe_echoer"
path = "bin/pipe_echoer/main.rs"

[dependencies]
nu-engine = { path = "../nu-engine", version = "0.87.2" }
nu-protocol = { path = "../nu-protocol", version = "0.87.2" }

serde = { version = "1.0" }
log = "0.4.20"
zstd = "0.13.0"
konst = "0.3.7"
serde_json = "1.0.108"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
  "Win32_System_Pipes",
  "Win32_System_IO",
]
[target.'cfg(unix)'.dependencies]
libc = "0.2.150"
