[package]
authors = ["The Nushell Project Developers"]
description = "Platform-agnostic pipes used by Nu"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-pipes"
edition = "2021"
license = "MIT"
name = "nu-pipes"
version = "0.88.0"

[lib]
bench = false

[[bin]]
name = "pipe_echoer"
path = "bin/pipe_echoer/main.rs"

[dependencies]
nu-engine = { path = "../nu-engine", version = "0.88.0" }
nu-protocol = { path = "../nu-protocol", version = "0.88.0" }

serde = "1.0"
serde_json = "1.0"
log = "0.4.20"
num_cpus = "1.16.0"
libc = "0.2.150"
konst = "0.3.8"
cfg-if = "1.0.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Pipes",
  "Win32_System_IO",
  "Win32_System_Threading",
]
