[package]
authors = ["The Nushell Project Developers"]
description = "Functionality for building Nushell plugins"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-plugin"
edition = "2021"
license = "MIT"
name = "nu-plugin"
version = "0.88.2"

[lib]
bench = false

[dependencies]
nu-engine = { path = "../nu-engine", version = "0.88.2" }
nu-protocol = { path = "../nu-protocol", version = "0.88.2" }

bincode = "1.3"
rmp-serde = "1.1"
serde = { version = "1.0" }
serde_json = { version = "1.0" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
  "Win32_System_Pipes",
  "Win32_System_IO",
]
