[package]
authors = ["The Nushell Project Developers"]
description = "An I/O plugin for a set of file formats for Nushell using the v1 plugin API"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu_plugin_formats_v1"
edition = "2021"
license = "MIT"
name = "nu_plugin_formats_v1"
version = "0.88.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# WARNING: This crate intentionally uses pinned dependencies for nu-protocol and nu-plugin.
# This is because we want to use the older 'v1' plugin API, and not the newer 'v2' plugin API 
# in order to be able to test backwards compatibility. If you are creating a new plugin, you
# should use the latest version of nu-protocol and nu-plugin.
nu-plugin = "0.88.1"
nu-protocol = "0.88.1"

indexmap = "2.1"
eml-parser = "0.1"
ical = "0.9"
rust-ini = "0.20.0"
